tests/baselines/reference/jsFileCompilationTypeParameterSyntaxOfFunction.errors.txt
tests/cases/compiler/a.js(1,12): error TS8004: 'type parameter declarations' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    function F<T>() { }
               ~
!!! error TS8004: 'type parameter declarations' can only be used in a .ts file.